small fix: fixed image overlap

--- a/wp-content/uploads/elementor/css/post-168c1c.css
+++ b/wp-content/uploads/elementor/css/post-168c1c.css
@@ -100,6 +100,10 @@
     box-sizing: border-box;
 }
 
+.elementor-section .elementor-container {
+    position: inherit;
+}
+
 .opproduct {
     display: flex;
     justify-content: center;
